Several UI fixes. Long titles are truncated at 50 characters and given an ellipsis. The container for the header was fixed, so wrapping does not occur. Subnav is now positioned absolute and does not interfere with content.

--- a/static/css/read52.css
+++ b/static/css/read52.css
@@ -3,15 +3,9 @@ body
   background: #fff url(/images/bg_repeat_2x140.png) repeat-x;
 }
 
-.topcontainer
+.topmost-cont
 { 
   height: 130px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-  padding-left:10px;
-  padding-right:10px;
-  margin-left:30px;
-  margin-top:10px;
 }
 
 .container
@@ -53,7 +47,6 @@ body
 {
   position:relative;
   z-index:2;
-  
 }
 
 /*.span-24, .span-12, .span-6
@@ -113,10 +106,9 @@ p.elab
 /***** Buttons Submenu******/
 #subnav
 {
-  // TODO: position absolute without blocking links further left
-//  position: absolute;
-//  top:140px;
-//  z-index: 1;
+  position: absolute;
+  top:140px;
+  z-index: 1; 
 }
 #subnav ul
 {
@@ -144,6 +136,8 @@ p.elab
 { 
   border: 4px solid #888;
   background: #eee;
+  -moz-border-radius: 9px;
+  border-radius: 9px;
 }
 
 /***************************/
